# chan-core

./: .gitignore  README.md  pyproject.toml  requirements.txt
chan_core/: __init__.py  config.py  engine.py
chan_core/common/: __init__.py  kline.py  math_utils.py  protocols.py  types.py
chan_core/signal/: __init__.py
chan_core/structure/: README.md  __init__.py  _completion.py  _feature_sequence.py  _fractal.py  _merge.py  _pen.py  _pivot.py  _segment.py  _trend.py
tests/: __init__.py  test_c2_fake_data.py  test_completion.py  test_core.py  test_feature_sequence.py  test_fractal.py  test_full_chain.py  test_kline.py  test_merge.py  test_pen.py  test_pivot.py  test_regression.py  test_segment.py  test_trend.py  test_type_end.py  test_types.py
